build: Fix -Werror build for clang

The argument tzname is renamed to tz_name to prevent confusion with
the global variable.

https://bugzilla.gnome.org/show_bug.cgi?id=760178